i18n = import('i18n')

i18n.gettext('sysprof',
  languages: [
    'cs',
    'de',
    'es',
    'fi',
    'hu',
    'pl',
    'pt',
    'pt_BR',
    'sl',
    'sk',
    'sr',
    'sv'
  ],
  args: [
    '--from-code=UTF-8',
    '--keyword=g_dngettext:2,3',
    '--add-comments',
    '--msgid-bugs-address=https://bugzilla.gnome.org/enter_bug.cgi?product=sysprof&keywords=I18N+L10N&component=general',
  ],
)
