sysprof_cli = executable('sysprof-cli',
  'sysprof-cli.c',
  dependencies: libsysprof_dep,
  c_args: exe_c_args,
  link_args: exe_link_args,
  install: true,
)

sysprof_dump = executable('sysprof-dump',
  'sysprof-dump.c',
  dependencies: libsysprof_dep,
  c_args: exe_c_args,
  link_args: exe_link_args,
)
