libsysprof_headers += files([
  'sp-gjs-source.h',
  'sp-hostinfo-source.h',
  'sp-perf-source.h',
  'sp-proc-source.h',
  'sp-source.h',
])

libsysprof_sources += files([
  'sp-gjs-source.c',
  'sp-hostinfo-source.c',
  'sp-perf-counter.c',
  'sp-perf-counter.h',
  'sp-perf-source.c',
  'sp-proc-source.c',
  'sp-source.c',
])
