libsysprof_headers += files([
  'sp-elf-symbol-resolver.h',
  'sp-jitmap-symbol-resolver.h',
  'sp-kernel-symbol-resolver.h',
  'sp-kernel-symbol.h',
  'sp-symbol-dirs.h',
  'sp-symbol-resolver.h',
])

libsysprof_sources += files([
  'sp-elf-symbol-resolver.c',
  'sp-jitmap-symbol-resolver.c',
  'sp-kernel-symbol-resolver.c',
  'sp-kernel-symbol.c',
  'sp-symbol-dirs.c',
  'sp-symbol-resolver.c',
])
