libsysprof_headers += files([
  'sp-map-lookaside.h',
  'sp-selection.h',
])

libsysprof_sources += files([
  'binfile.c',
  'binfile.h',
  'demangle.cpp',
  'demangle.h',
  'elfparser.c',
  'elfparser.h',
  'sp-line-reader.c',
  'sp-line-reader.h',
  'sp-map-lookaside.c',
  'sp-platform.c',
  'sp-platform.h',
  'sp-selection.c',
  'stackstash.c',
  'stackstash.h',
])

libsysprof_ui_headers += files([
  'sp-model-filter.h',
  'sp-process-model-item.h',
  'sp-process-model.h',
  'sp-zoom-manager.h',
])

libsysprof_ui_sources += files([
  'pointcache.c',
  'pointcache.h',
  'sp-color-cycle.c',
  'sp-color-cycle.h',
  'sp-model-filter.c',
  'sp-process-model-item.c',
  'sp-process-model.c',
  'sp-theme-manager.c',
  'sp-theme-manager.h',
  'sp-zoom-manager.c',
  'stackstash.c',
  'stackstash.h',
])
