libsysprof_ui_headers += files([
  'sp-cpu-visualizer-row.h',
  'sp-line-visualizer-row.h',
  'sp-visualizer-row.h',
  'sp-visualizer-view.h',
])

libsysprof_ui_sources += files([
  'sp-cpu-visualizer-row.c',
  'sp-line-visualizer-row.c',
  'sp-visualizer-list.c',
  'sp-visualizer-list.h',
  'sp-visualizer-row-private.h',
  'sp-visualizer-row.c',
  'sp-visualizer-ticks.c',
  'sp-visualizer-ticks.h',
  'sp-visualizer-view.c',
])
