libsysprof_ui_headers += files([
  'sp-cell-renderer-percent.h',
  'sp-empty-state-view.h',
  'sp-failed-state-view.h',
  'sp-multi-paned.h',
  'sp-process-model-row.h',
  'sp-profiler-menu-button.h',
  'sp-recording-state-view.h',
])

libsysprof_ui_sources += files([
  'sp-cell-renderer-percent.c',
  'sp-empty-state-view.c',
  'sp-failed-state-view.c',
  'sp-multi-paned.c',
  'sp-process-model-row.c',
  'sp-profiler-menu-button.c',
  'sp-recording-state-view.c',
])
